# zkan

./: .gitignore  README.md
climbingTheHill/: Cargo.toml
climbingTheHill/src/: cs.rs  data.rs  e_computing.rs  engine.rs  lib.rs  main.rs  shader_fractal.rs
climbingTheHill/src/shaders/: fractal.glsl  multiply.glsl
climbingTheHill/src/work-from-home/: Cargo.toml
climbingTheHill/src/work-from-home/src/: main.rs
climbingTheHill/src/work-from-home/src/shaders/: fragment.frag
downhill/: CMakeLists.txt
modern_opengl/: CMakeLists.txt
one4theroad/: Cargo.toml
one4theroad/src/: init.rs  init_devices.rs  lib.rs  swapchain.rs
oneofmany/: CMakeLists.txt  main.cpp
oneofmany/include/lvk/: CMakeLists.txt  HelpersImGui.cpp  HelpersImGui.h  LVK.cpp  LVK.h  LVK.mm
oneofmany/include/lvk/vulkan/: CMakeLists.txt  VulkanClasses.cpp  VulkanClasses.h  VulkanUtils.cpp  VulkanUtils.h
oneofmany/include/taskflow/algorithm/: data_pipeline.hpp  partitioner.hpp  pipeline.hpp
oneofmany/include/taskflow/core/: async_task.hpp  error.hpp  executor.hpp  flow_builder.hpp  observer.hpp  runtime.hpp  semaphore.hpp  task.hpp  taskflow.hpp
oneofmany/include/taskflow/cuda/: cuda_capturer.hpp  cuda_device.hpp  cuda_memory.hpp  cudaflow.hpp
oneofmany/include/taskflow/cuda/algorithm/: find.hpp  for_each.hpp  reduce.hpp  transform.hpp
oneofmany/include/taskflow/sycl/: syclflow.hpp
oneofmany/include/taskflow/sycl/algorithm/: reduce.hpp
oneofmany/include/taskflow/utility/: small_vector.hpp
oneofmany/include/volk/: CMakeLists.txt  generate.py  volk.h
oneofmany/include/volk/test/cmake_using_source_directly/: CMakeLists.txt
oneofmany/src/: Def.cpp  Def.h  def.h
patterns/: CMakeLists.txt  main.cpp
patterns/src/: dependency_inversion.h  journal.cpp  open_closed_principle.h  single_responsibility.hpp
patterns/src/builders/: builder.h  groovy_style.h
patterns/src/factory/: hot_drink.h  point_in_case.h
patterns/src/prototype/: employee_factory.h  record.h  serialization.h
patterns/src/singleton/: implementation.h  multiton.h
patterns/src/solid_principle/: interface_segregation_principle.h  liskov_substitution_principle.h  open_closed_principle.h
patterns/src/structure/adapter/: example.h
patterns/src/structure/bridge/: bridge.h  pimpl.h  shrink_wrapped_pimpl.cpp  shrink_wrapped_pimpl.h
patterns/src/structure/composite/: array_backed_properties.h  example.h  neural_networks.h
patterns/src/structure/decorator/: functional_decorator.h
repeatrepeat/: CMakeLists.txt
rust-idiom/: Cargo.toml
rust-idiom/src/: main.rs
simplex_vulkan/: .clang-format  CMakeLists.txt  toolchain.clang.cmake
simplex_vulkan/vk/: main.cpp
simplex_vulkan/vk/glfw/: glfw_initialization.cpp  glfw_initialization.h
simplex_vulkan/vk/include/: VulkanApp.h
simplex_vulkan/vk/src/: VulkanApp.cpp
vkguide/: CMakeLists.txt  main.cpp
vkguide/src/: vulkanengine.cpp  vulkanengine.h
vulkan_cpp_tutorial/: CMakeLists.txt
yt_vulkan/: CMakeLists.txt
yt_vulkan/vk/: setup_window.cpp  setup_window.h
ytubetutorial/: CMakeLists.txt  first_app.cpp  first_app.h  main.cpp
ytubetutorial/mve/: Pipeline.cpp  Pipeline.h  mve_Pipeline.cpp  mve_Pipeline.h  mve_device.cpp  mve_device.h  mve_swap_chain.cpp  mve_swap_chain.h  mve_window.cpp  mve_window.h
